minor changes to api specification, naming and examples
